# pywib

./: .buildinfo  .gitignore  README.md  api.html  constants.html  genindex.html  index.html  introduction.html  keyboard.html  mouse.html  movement.html  movement_metrics.html  objects.inv  patterns.html  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  timing.html  trajectory.html
.github/workflows/: deply_docs.yml  publish.yml  test_on_pr.yml
_sources/: index.rst.txt  introduction.rst.txt  mouse.rst.txt  movement_metrics.rst.txt  patterns.rst.txt
_sources/api/: index.rst.txt
_sources/api/keyboard/: keystrokes.rst.txt
_sources/api/movement/: acceleration.rst.txt  auc.rst.txt  index.rst.txt  jerkiness.rst.txt  path.rst.txt  velocity.rst.txt
_sources/api/timing/: index.rst.txt  pauses.rst.txt  time.rst.txt
_sources/api/trajectory/: auc.rst.txt  deviations.rst.txt
_sources/api/utils/: index.rst.txt  visualization.rst.txt
_static/: custom.css
api/: index.html
api/keyboard/: index.html  keystrokes.html
api/mouse/: clicks.html
api/movement/: acceleration.html  auc.html  index.html  jerkiness.html  path.html  velocity.html
api/timing/: index.html  pauses.html  time.html
api/trajectory/: auc.html  deviations.html  index.html  path.html
api/utils/: index.html  visualization.html
docs/source/: api.rst  conf.py  constants.rst  index.rst  introduction.rst  keyboard.rst  mouse.rst  movement.rst  movement_metrics.rst  patterns.rst  references.bib  referenes.bib  timing.rst  trajectory.rst
docs/source/_templates/: attribute_table.rst
docs/source/api/: index.rst
docs/source/api/keyboard/: index.rst  keystrokes.rst
docs/source/api/mouse/: clicks.rst
docs/source/api/movement/: acceleration.rst  index.rst  jerkiness.rst  path.rst  velocity.rst
docs/source/api/timing/: pauses.rst  time.rst
docs/source/api/trajectory/: index.rst
docs/source/api/utils/: visualization.rst
pywib/: __init__.py  constants.py
pywib/core/: keyboard.py  movement.py
pywib/utils/: __init__.py  segmentation.py  utils.py  validation.py  validator.py
src/pywib/: __init__.py  constants.py
src/pywib/algorithms/: __init__.py  fitts.py
src/pywib/algorithms/patterns/: hesitation_pattern.py  straight_pattern.py
src/pywib/core/: __init__.py  keyboard.py  mouse.py  movement.py  timing.py
src/pywib/core/keyboard/: __init__.py  keyboard.py
src/pywib/core/mouse/: __init__.py  mouse.py
src/pywib/core/movement/: __init__.py  movement.py  trajectory.py
src/pywib/core/timing/: __init__.py  timing.py
src/pywib/utils/: __init__.py  keyboard.py  movement.py  segmentation.py  timing.py  utils.py  validation.py  visualization.py
src/pywib/utils/visualization/: __init__.py  trace_strategies.py  visualization.py
test/: mouse.py  movement.py  test.py  test_keyboard.py  test_mouse.py  test_movement.py  test_public_exports.py  test_timing.py  test_trajectory.py  test_validation.py  test_visualzation.py  timing.py  utils.py
test/test_data/: pauses.csv  test_auc.csv  test_duplicate_timestamps.csv  test_incorrect_columns.csv  test_missing_keyboard_cols.csv  test_mouse.csv  test_mouse_keyboard.csv  test_window_resize_error.csv
