[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "pywib"
version = "0.1.0"
authors = [
  { name="Guillermo Carvajal Aza", email="carvajalguillermo@uniovi.es" },
]
description = "HCI Web Interaction Analyzer - A library for analyzing web user interactions"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "matplotlib>=3.5.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/HumanCommunicationInteraction/pywib"
"Bug Tracker" = "https://github.com/HumanCommunicationInteraction/pywib/issues"
Documentation = "https://pywib.readthedocs.io/"
Repository = "https://github.com/HumanCommunicationInteraction/pywib.git"

[tool.hatch.build.targets.wheel]
packages = ["pywib"]